# GEMS

./: .gitattributes  .gitignore  ABOUT  Makefile.am  README.md  configure.ac
docs/: ddda.md  types.md
examples/: test.sh
examples/Analitical/: sho.gms  wall.gms
examples/DDDA/: md.gms
examples/Graph/: adj.gms  subgraphs.gms
examples/LJ/: feels.gms  lj.gms  slj.gms  sm1.gms  wca.gms
examples/NEB/: neb.gms  test.prm
examples/NEB/ref/: Energy.neb.dat.NebF
examples/NPT/: lgf.gms  lgf_flex.gms  lgf_flex_a.gms  lgf_flex_b.gms  lgf_x.gms
examples/NVE/: pred_corr_5.gms  v_verlet.gms
examples/NVT/: brownian.gms  ermak.gms  ermak_a.gms  ermak_b.gms
examples/RepExchange/: lj.gms
examples/SMA-TB/: bulk.gms  coords.xyz  cvs.gms  cvx.gms  md.gms
examples/WTMD/: conf.xyz  lj_WTMD_1D.gms
examples/XYZ/: Pos.md.xyz  ffield.reax  readxyz.gms
examples/configs/: graphene.gms  graphito.gms  orthorhombic_crystal.gms  tetrahedron_fcc.gms  wurtzita.gms
examples/configs/ref/: gold_cube.xyz  graphene_ribon.xyz  graphene_triangle.xyz  graphito.xyz  tetrahedron_fcc.xyz
examples/configs/unitcells/: fcc.gms  fcc111.gms  fcdc.gms  graphene.gms  hcp.gms
examples/hyperdynamics/: clst_a42.xyz  compress.gms  compress_below.gms  coords_min.xyz  lpe.gms
examples/mVT/: main.gms
examples/optimize/: lbfgs.gms  minvol.gms
examples/syntax/: bloques.gms
lib/fparser/: configure.ac
lib/sprng5/: Makefile.am  configure.ac
lib/sprng5/SRC/: Makefile.am
lib/sprng5/SRC/pmlcg/: Makefile.am
lib/sprng5/check/cmrg/F77/: Makefile.am
lib/sprng5/check/lcg64/F77/: Makefile.am
lib/sprng5/check/mlfg/F77/: Makefile.am
lib/sprng5/check/pmlcg/F77/: Makefile.am
lib/sprng5/m4/: ax_mpi.m4
m4/: README.md
parameters/: baletto_2003.prm  cleri_1993.prm  lucas_2017.prm  pittaway_2009.prm
scripts/: gems.vim
src/: Algebra.F90  Analitical.f90  Atoms.F90  Bias.f90  Bond_Boost.f90  CLInterpreter.F90  CVS.F90  Calc.F90  Cells.F90  Checkpoint.F90  Constants.F90  DDDA.F90  Elements.F90  Errors.f90  FIRE.f90  Fields.f90  ForceField.F90  Graphs.F90  Groups.F90  Hyperdinamics.f90  Input_Parsing.F90  Inq_Properties.F90  Integration.F90  Interaction.f90  LJ0.f90  MPI.F90  Main.F90  Makefile.am  Metadynamics.f90  NEB.f90  Neighbor.F90  Neighbour.F90  Output.F90  Pairs.F90  Program_Types.F90  Programs.f90  Quasi_Newton.f90  Random.F90  Random_sprng.F90  ReplicaExchange.f90  (+9 more)
